--- a/movieStore/movie-store-api/index.html
+++ b/movieStore/movie-store-api/index.html
@@ -16,11 +16,11 @@
             <nav id="main-nav">
                 <a class="logo">GHIBLI</a>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html" id="home">Home</a></li>
                     <!--to add a dropdown menu-->
-                    <li class="dropdown"><a href="javascript:void(0)" class="drop-btn">Filter</a>
+                    <li class="dropdown"><a href="javascript:void(0)" class="drop-btn" id="drop-button">Filter</a>
                     <div class="dropdown-menu">
-                        <a href="#">Random</a>
+                        <a href="#" id="drop-1">Random</a>
                         <a href="#">Title</a>
                         <a href="#">Director</a>
                         <a href="#">Release Date</a>
@@ -36,7 +36,7 @@
             </div>
             <nav id="account-nav">
                 <a class="icon-btn menu-btn" href="#"><i class="fas fa-film icon-2x"> Favourites</i></a>
-                <a class="icon-btn menu-btn" href="#"><i class="fas fa-cart-plus icon-2x"> Checkout</i></a>
+                <!--a class="icon-btn menu-btn" href="#"><i class="fas fa-cart-plus icon-2x"> Checkout</i></a-->
             </nav>
         </header>
         <!--Content here-->
